# saas-scraper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  sisakulint.yml  test.yml
src/saas_retriever/: __init__.py  cli.py  core.py  credentials.py  rate_limit.py  registry.py
src/saas_retriever/connectors/: __init__.py  bitbucket.py  confluence.py  confluence_storage.py  github.py  gitlab.py  jira.py  jira_adf.py  jira_storage.py  notion.py  notion_markdown.py  slack.py
src/saas_scraper/: __init__.py  browser.py  cli.py  core.py  registry.py
src/saas_scraper/connectors/: __init__.py  _base.py  _scroll.py  bitbucket.py  confluence.py  github.py  gitlab.py  jira.py  notion.py  slack.py
tests/: _fake_page.py  test_bitbucket.py  test_capabilities.py  test_cli.py  test_confluence.py  test_core.py  test_credentials.py  test_github.py  test_gitlab.py  test_import_side_effects.py  test_jira.py  test_notion.py  test_other_connectors.py  test_rate_limit.py  test_registry.py  test_scroll.py  test_slack.py
