[project]
name = "saas-retriever"
version = "0.1.0"
description = "API-first SaaS content retriever — uniform Document stream from GitHub (issues + PRs + code, org-wide). No scraping, no Playwright."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [{ name = "pleno", email = "ai@egahika.dev" }]
keywords = ["saas", "github", "rest", "api", "secrets", "dlp", "pii"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
saas-retriever = "saas_retriever.cli:app"

[project.urls]
Homepage = "https://github.com/plenoai/saas-retriever"
Repository = "https://github.com/plenoai/saas-retriever"
Issues = "https://github.com/plenoai/saas-retriever/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saas_retriever"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic CLI signatures rely on `typer.Option(...)` defaults.
"src/saas_retriever/cli.py" = ["B008"]
# tests intentionally raise broadly when the precise exception class is
# implementation-private (typer wraps BadParameter at runtime).
"tests/test_cli.py" = ["B017"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
